public/css/style.css
html,
body {
  overflow-x: hidden;
  overflow-y: hidden;
}
body {
  position: relative;
  font: 13px Helvetica, Arial;
  background: #fafafa;
}

.wrapper {
  display: flex;
  width: 100%;
  align-items: stretch;
}

#sidebar {
  min-width: 400px;
  max-width: 400px;
  min-height: 100vh;
  background: #7386d5;
  transition: all 0.3s;
}

#sidebar.active {
  margin-left: -400px;
}

.sidebarCollapse {
  position: absolute;
  display: none;
  border-radius: 0rem;
  height: 45px;
  margin-top: -1px;
}
.sidebarCollapse:focus {
  outline: none;
  box-shadow: none;
}
.sidebarCollapse.left {
  top: 0;
  left: 0;
}

.sidebarCollapse.right {
  top: 0;
  right: 0;
}

.sidebarCollapse .badge {
  position: absolute;
  top: 30px;
  left: 70px;
  padding: 4px 6px;
  border-radius: 50%;
  background-color: #f39c12;
  color: white;
}

a[data-toggle="collapse"] {
  position: relative;
}

.dropdown-toggle::after {
  display: block;
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
}

/* ---------------------------------------------------
  CONTENT STYLE
----------------------------------------------------- */

#content {
  width: 100%;
  padding: 20px;
  min-height: 100vh;
  transition: all 0.3s;
  position: relative;
  display: flex;
  align-items: center;
}

.gameView {
  flex-grow: 1;
}

/* ---------------------------------------------------
  MEDIAQUERIES
----------------------------------------------------- */

@media (max-width: 768px) {
  #sidebar {
    min-width: 100vw;
    max-width: 100vw;
    margin-left: -100vw;
  }

  #sidebar.active {
    margin-left: 0vw;
  }
  .sidebarCollapse {
    display: block;
  }

  .table-responsive {
    font-size: 0.8rem;
  }

  .table-custom th,
  .table-custom td {
    padding: 0.3em !important;
  }

  .btn-custom {
    padding: 0.25rem 0.5rem;
    font-size: 0.875rem;
    line-height: 1.5;
    border-radius: 0.2rem;
  }

  .text-center-custom {
    text-align: center !important;
  }
}

/* ---------------------------------------------------
  MESSAGES
----------------------------------------------------- */

#messages,
#users,
#scores,
#endGameScores {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#messages li,
#scores li {
  padding: 5px 10px;
}
#messages li:nth-child(odd),
#scores li:nth-child(odd) {
  background: #eee;
}
#messages #scores {
  margin-bottom: 40px;
}

#users ul,
#users li {
  width: 33%;
  float: left;
  font-weight: bold;
  margin-top: 5px;
  margin-bottom: 5px;
}

#endGameScores li {
  font-size: 20px;
}

#endGameScores li:nth-child(1) {
  font-size: 30px;
}

#endGameScores li:nth-child(2) {
  font-size: 25px;
}

.card-body-custom {
  padding: 0px;
}

